# recad-python

./: .gitignore  Cargo.toml  Makefile  README.md  cspell.json  project-words.txt  pyproject.toml
.github/workflows/: build.yml  doc.yml
docs/: api.rst  changelog.rst  cli.rst  conf.py  elements.rst  index.rst  install.rst  schema.rst
recad/: __init__.py
samples/jupyter/: README.md
samples/jupyter/.ipynb_checkpoints/: opamp-checkpoint.ipynb
samples/nuco-v/: bmprobe.kicad_sch  nuco-v-rescue.kicad_sym  nuco-v.kicad_prl  nuco-v.kicad_pro  nuco-v.kicad_sch
samples/python/: opamp.py
samples/quarto/: _quarto.yml  index.qmd  test.py
samples/quarto/posts/post-with-code/: index.qmd  opamp.kicad_sch  schema.kicad_sch
samples/quarto/posts/svf/: index.qmd  svf.kicad_sch
src/: circuit.rs  lib.rs  pcb.rs  schema.rs  simulation.rs
test/: test_schema.py
